--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@material-ui/icons": "4.11.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "typescript": "3.3.3"
