--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "using-pre-built-react-components",
+  "homepage": "http://SimonYuvarlak.github.io/La_Casa_de_Nota",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
